--- a/index.html
+++ b/index.html
@@ -404,11 +404,11 @@ src="https://www.facebook.com/tr?id=1025943202632632&ev=PageView&noscript=1"
         var slideshowInner = document.getElementById('slideshow');
 
         slideshowInner.addEventListener('click', function() {
-            window.location.href = 'https://t.me/+MAemnsncRh9jNjk0';
+            window.location.href = 'https://t.me/+RZApfQ5VsUZhNWU9';
         });
 
         function openTelegram() {
-            window.location.href = 'https://t.me/+MAemnsncRh9jNjk0';
+            window.location.href = 'https://t.me/+RZApfQ5VsUZhNWU9';
         }
         // Call the function when the window is resized
         window.addEventListener('resize', applyMarginForMobileView);
