--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ src="https://www.facebook.com/tr?id=1025943202632632&ev=PageView&noscript=1"
                                 <br />
                                 <br />
                                 <br />
-                                <div class="title">All - Rounder</div>
+                                <div class="title">FIXER BABA</div>
                                 <a onclick="openTelegram()" style="cursor:pointer" class="btn" id="slideshow">
                 <i class="fa fa-telegram" style="font-size:200px"></i>
               </a>
