--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ src="https://www.facebook.com/tr?id=1025943202632632&ev=PageView&noscript=1"
                                 <br />
                                 <br />
                                 <br />
-                                <div class="title">All - Rounder</div>
+                                <div class="title">FIXER BABA</div>
                                 <a onclick="openTelegram()" style="cursor:pointer" class="btn" id="slideshow">
                 <i class="fa fa-telegram" style="font-size:200px"></i>
               </a>
@@ -187,7 +187,7 @@ src="https://www.facebook.com/tr?id=1025943202632632&ev=PageView&noscript=1"
                                 <br />
                                 <br />
                                 <a onclick="openTelegram()" style="cursor:pointer" class="btn" id="slideshow">
-                <span class="btn-inner">Join The Original All - Rounder</span>
+                <span class="btn-inner">Join The Original FIXER BABA</span>
                 <i class="fa fa-telegram" style="font-size:48px"></i>
                 </a>
                                 <br /> <br />
